2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.addin.xml: Update MD version.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* ILAsmConsoleProject.xpt.xml: Make template categories translatable.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.addin.xml: Bump add-in versions.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.mdp, Makefile.am: Directory reorganization.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.addin.xml: Bump MD version.

2007-10-24  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.mdp, ILAsmConsoleProject.xpt.xml, Makefile.am,
	  icons/ILAsm.Project.DOSProject: Updated project icons. Use the base
	  project icon with an overlay to show the type.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.mdp: Project file names updated by change in MD path
	  functions.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.addin.xml: Bump MD version.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com> 

	* Gui/CompilerParametersPanel.cs: Fix compiler warning.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* Gui/CompilerParametersPanel.cs: Changes due to new property
	  infrastructure.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.mdp, Makefile.am, ILAsmBinding.addin.xml: Reorganized the
	  extension point hierarchy. Embedded all add-in manifests as resources.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.mdp: Copy the .addins.xml file to the output dir.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.mdp, Makefile.am: Reference shared assemblies from the
	  correct location.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.mdp, Gui/CompilerParametersPanel.cs, Makefile.am,
	  ILAsmBinding.addin.xml: Migration to Mono.Addins.

2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 
